# MontyHall

./: README.md  pyproject.toml
montyhall/: montyhall.py
