[tool.poetry]
name = "montyhall"
version = "0.1.0"
description = ""
authors = ["StigHaraldGustavsen <stighg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.56.4"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
